--- a/app/globals.scss
+++ b/app/globals.scss
@@ -33,6 +33,40 @@ body {
   }
 }
 
+//HEADER
+#header {
+  width: 100%;
+  height: auto;
+  padding-block: 15px;
+  background-color: var(--primary);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-inline: 25px;
+  color: var(--background);
+
+  ul {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    justify-content: end;
+
+    li {
+      display: grid;
+      align-items: center;
+      color: var(--background);
+      cursor: pointer;
+      &.icon {
+        padding: 8px;
+      }
+      &.userInfo {
+        padding: 8px;
+      }
+    }
+  }
+}
+//END OF HEADER
+
 //LOGIN SECTION
 #login {
   .gradient-bg {
@@ -53,3 +87,23 @@ body {
 }
 //END OF LOGIN
 
+//DASHBOARD
+#dashboard {
+  display: flex;
+  width: 100%;
+  main {
+    flex-grow: 1;
+    max-width: 100%;
+    transition: margin-left 1s ;
+  }
+
+  //SIDEBAR
+  #sidebar {
+  transition: width 0.5s ease-in-out;
+}
+
+#sidebar.collapsed {
+  width: 0;
+  overflow: hidden;
+}
+}
