--- a/app/globals.scss
+++ b/app/globals.scss
@@ -37,7 +37,7 @@ body {
 #header {
   width: 100%;
   height: auto;
-  padding-block: 15px;
+  padding-block: 10px;
   background-color: var(--primary);
   display: flex;
   justify-content: space-between;
@@ -48,19 +48,25 @@ body {
   ul {
     list-style: none;
     display: flex;
-    gap: 20px;
+    gap: 15px;
     justify-content: end;
 
     li {
       display: grid;
       align-items: center;
+      justify-content: center;
       color: var(--background);
       cursor: pointer;
+      height: 40px;
+      padding: 0;
       &.icon {
-        padding: 8px;
+        background-color: #e6e6e635;
+        border-radius: 50%;
+        width: 40px;
       }
       &.userInfo {
-        padding: 8px;
+        display: flex;
+        gap: 5px;
       }
     }
   }
@@ -94,16 +100,16 @@ body {
   main {
     flex-grow: 1;
     max-width: 100%;
-    transition: margin-left 1s ;
+    transition: margin-left 1s;
   }
 
   //SIDEBAR
   #sidebar {
-  transition: width 0.5s ease-in-out;
-}
+    transition: width 0.5s ease-in-out;
+  }
 
-#sidebar.collapsed {
-  width: 0;
-  overflow: hidden;
-}
+  #sidebar.collapsed {
+    width: 0;
+    overflow: hidden;
+  }
 }
