--- a/app/globals.scss
+++ b/app/globals.scss
@@ -120,28 +120,130 @@ body {
     max-width: 100%;
     transition: margin-left 1s;
   }
+}
+//END OF DASHBOARD
 
-  //SIDEBAR
-  #sidebar {
-    transition: width 0.5s ease-in-out;
+//SIDEBAR
+#sidebar {
+  transition: width 0.5s ease-in-out;
 
-    &.collapsed {
-      width: 0;
-      overflow: hidden;
+  &.collapsed {
+    width: 0;
+    overflow: hidden;
+  }
+
+  #areas {
+    width: 85%;
+
+    .sidebarCollapsible {
+      display: flex;
+      margin: 5px 0;
+      padding: 0;
+      justify-content: space-between;
+      align-items: center;
+      color: var(--background);
+      width: 100%;
     }
+  }
+}
+//END OF SIDEBAR
 
-    #areas {
-      width: 85%;
+//BLOG
+#blog {
+  padding: 20px 25px;
 
-      .sidebarCollapsible {
-        display: flex;
-        margin: 5px 0;
-        padding: 0;
-        justify-content: space-between;
-        align-items: center;
-        color: var(--background);
-        width: 100%;
+#zone1Wrapper {
+  position: relative;
+  width: 100%;
+  max-width: 100%;
+  height: 500px;
+  margin: 0 auto;
+  overflow: hidden;
+
+  .carousel {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+    width: 100%;
+    height: 100%;
+  }
+
+  .slide {
+    min-width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 2rem;
+    border: none;
+    cursor: pointer;
+    color: white;
+
+    &.arrow-left {
+      left: 10px;
+    }
+    &.arrow-right {
+      right: 10px;
+    }
+  }
+
+  .dots {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    right: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: translateX(50%);
+    text-align: center;
+    padding-block: 10px;
+    background: #e6e6e660;
+
+    .dot {
+      height: 12px;
+      width: 12px;
+      margin: 0 4px;
+      background-color: gray;
+      border-radius: 50%;
+      display: inline-block;
+      cursor: pointer;
+
+      &.active {
+        background-color: black;
       }
     }
   }
+}
+
+.zone1Card {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background: var(--foreground);
+
+  .overlay {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    color: white;
+    z-index: 1;
+
+    .title {
+      font-size: 1.5rem;
+      font-weight: bold;
+    }
+
+    .date,
+    .time {
+      font-size: 0.875rem;
+    }
+  }
+}
+
 }
